// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockContainer changes block pointer event when editor editable state change 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <div
    class="brd-c-bfhcug brd-c-bfhcug-iRIwWx-disabled-true"
  >
    <div
      aria-haspopup="dialog"
      class="brd-c-iAZzvg"
      contenteditable="false"
      data-drag-handle="true"
      draggable="true"
    >
      <button
        class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-fXZnrp-size-sm brd-c-ivBjhy"
        role="button"
        tabindex="0"
        type="button"
      >
        <i
          data-testid="mock-icon-DragSecondary"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`BlockContainer changes block pointer event when editor editable state change 2`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: unset; white-space: normal;"
>
  <div
    class="brd-c-bfhcug brd-c-bfhcug-iRIwWx-disabled-true"
  >
    <div
      aria-haspopup="dialog"
      class="brd-c-iAZzvg"
      contenteditable="false"
      data-drag-handle="true"
      draggable="true"
    >
      <button
        class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-fXZnrp-size-sm brd-c-ivBjhy"
        role="button"
        tabindex="0"
        type="button"
      >
        <i
          data-testid="mock-icon-DragSecondary"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`BlockContainer inline 1`] = `
<span
  as="span"
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <div
    class="brd-c-bfhcug brd-c-bfhcug-iRIwWx-disabled-true"
  >
    <span
      class="brd-c-bbClCh"
      contenteditable="false"
    >
       
    </span>
    block
    <span
      class="brd-c-bbClCh"
      contenteditable="false"
    >
       
    </span>
    <div
      aria-haspopup="dialog"
      class="brd-c-iAZzvg"
      contenteditable="false"
      data-drag-handle="true"
      draggable="true"
    >
      <button
        class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-fXZnrp-size-sm brd-c-ivBjhy"
        role="button"
        tabindex="0"
        type="button"
      >
        <i
          data-testid="mock-icon-DragSecondary"
        />
      </button>
    </div>
  </div>
</span>
`;

exports[`BlockContainer with actionOptions 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <div
    class="brd-c-bfhcug brd-c-bfhcug-iRIwWx-disabled-true"
  >
    block
    <div
      aria-haspopup="dialog"
      class="brd-c-iAZzvg"
      contenteditable="false"
      data-drag-handle="true"
      draggable="true"
    >
      <button
        class="ButtonUnstyled-root brd-c-dsuUsp brd-c-dsuUsp-eWWUXK-btnType-text brd-c-dsuUsp-cAxcPy-size-md brd-c-PJLV brd-c-PJLV-ivBjhy-size-sm"
        role="button"
        tabindex="0"
        type="button"
      >
        <i
          data-testid="mock-icon-DragSecondary"
        />
      </button>
    </div>
  </div>
</div>
`;
